tests/errors/missing_brace.js
// Error: Missing closing brace
function missing_brace() {
  let x = 10;
  return x;


missing_brace();
